[gd_scene load_steps=2 format=2]

[ext_resource path="res://logic/scenes/Main/src/Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="view" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="playBackground" type="Button" parent="view"]
anchor_left = 0.04
anchor_top = 0.03
anchor_right = 0.334
anchor_bottom = 0.108
text = "playBackground"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="pauseBackground" type="Button" parent="view"]
anchor_left = 0.04
anchor_top = 0.134
anchor_right = 0.334
anchor_bottom = 0.212
text = "pauseBackground"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="playSfx1" type="Button" parent="view"]
anchor_left = 0.584
anchor_top = 0.03
anchor_right = 0.9
anchor_bottom = 0.102
text = "PlaySfx1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="playSfx2" type="Button" parent="view"]
anchor_left = 0.584
anchor_top = 0.136
anchor_right = 0.908
anchor_bottom = 0.23
text = "PlaySfx2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="mutedBGBus" type="CheckButton" parent="view"]
anchor_left = 0.04
anchor_top = 0.286
anchor_right = 0.328
anchor_bottom = 0.366
margin_right = -68.0
text = "Muted BG"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="mutedSFXBus" type="CheckButton" parent="view"]
anchor_left = 0.59
anchor_top = 0.286
anchor_right = 0.92
anchor_bottom = 0.366
text = "Muted SFX"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BgVolumeValue" type="Label" parent="view"]
anchor_left = 0.132
anchor_top = 0.45
anchor_right = 0.212
anchor_bottom = 0.478
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SfxVolumeValue" type="Label" parent="view"]
anchor_left = 0.694
anchor_top = 0.45
anchor_right = 0.85
anchor_bottom = 0.478
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bgVolume" type="VSlider" parent="view"]
anchor_left = 0.142
anchor_top = 0.498
anchor_right = 0.206
anchor_bottom = 0.902
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SfxVolume" type="VSlider" parent="view"]
anchor_left = 0.708
anchor_top = 0.498
anchor_right = 0.822
anchor_bottom = 0.904
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": true
}
